# BrokerBob

./: .gitignore  README.md  gitignore  pyproject.toml
brokerbob/: test3.ipynb
brokerbob/summaries/10_stocks/: model.forsyth  summary.txt
brokerbob/summaries/11_stock_20_days/: model.forsyth  summary.txt
brokerbob/summaries/11_stock_30_days/: model.forsyth  summary.txt
brokerbob/summaries/12_stocks/: model.forsyth  summary.txt
brokerbob/summaries/14_stocks/: model.forsyth  summary.txt
brokerbob/summaries/1_stock/: model.forsyth  summary.txt
brokerbob/summaries/1_stock_20_days/: model.forsyth  summary.txt
brokerbob/summaries/1_stock_30_days/: model.forsyth  summary.txt
brokerbob/summaries/8_stock_20_days/: model.forsyth  summary.txt
brokerbob/summaries/8_stock_30_days/: model.forsyth  summary.txt
brokerbob/summaries/8_stocks/: model.forsyth  summary.txt
brokerbob/summaries/9_stock_20_days/: model.forsyth  summary.txt
brokerbob/summaries/9_stock_30_days/: model.forsyth  summary.txt
