[tool.poetry]
name = "brokerbob"
version = "0.1.0"
description = ""
authors = ["Henry Forsyth <robert.h.forsyth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
transformers = "^4.39.3"
colorama = "^0.4.6"
optimum = "^1.18.0"
auto-gptq = "^0.7.1"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
